--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -62,3 +62,13 @@ body {
 .player-font {
     font-size: 13px;
 }
+.btn-plus {
+    padding-top: 3px;
+    /* height: 30px; */
+    /* top: 16px; */
+    margin-top: 30px;
+    margin-right: 17px;
+}
+.title-player-page {
+    margin: 0 auto;
+}
