Add search transfer feature

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('layouts/_flash_message.html.twig') }}
         {{ include('layouts/_nav.html.twig') }}
         <main role="main" class="container">
             {% block body %}{% endblock %}    
