--- a/templates/layouts/_nav.html.twig
+++ b/templates/layouts/_nav.html.twig
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="#">Club</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transfer</a>
+                    <a class="nav-link" href="{{ path('app_list_transfer') }}">Transfer</a>
                 </li>
                 
             </ul>
