--- a/templates/transfer/index.html.twig
+++ b/templates/transfer/index.html.twig
@@ -47,4 +47,7 @@
             </table>
         </div>
     </div>
+    <div class="row">
+        <div id="calendar"></div>
+    </div>
 {% endblock %}
